--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,14 +21,14 @@
     <div>
         <div>
 
-            <h1 class="logo-name">IN+</h1>
+            <h1 class="logo-name">MAIL+</h1>
 
         </div>
-        <h3>Welcome to IN+</h3>
-        <p>Perfectly designed and precisely prepared admin theme with over 50 pages with extra new web app views.
-            <!--Continually expanded and constantly improved Inspinia Admin Them (IN+)-->
+        <h3>欢迎使用MAIL++</h3>
+        <p>
+
         </p>
-        <p>Login in. To see it in action.</p>
+        <p>请登录</p>
         <div class="m-t" role="form">
             <p style="text-align: right;color: red" id="info"></p>
             <div class="form-group">
@@ -37,15 +37,15 @@
             <div class="form-group">
                 <input id="password" type="password" class="form-control" placeholder="Password" required="">
             </div>
-            <button id="loginButton" type="submit" class="btn btn-primary block full-width m-b">Login</button>
+            <button id="loginButton" type="submit" class="btn btn-primary block full-width m-b">登录</button>
 
             <a href="#">
-                <small>Forgot password?</small>
+                <small>忘记密码？</small>
             </a>
             <p class="text-muted text-center">
-                <small>Do not have an account?</small>
+                <small>没有账号？</small>
             </p>
-            <a class="btn btn-sm btn-white btn-block" href="register.html">Create an account</a>
+            <a class="btn btn-sm btn-white btn-block" href="register.html">创建账号</a>
         </div>
         <p class="m-t">
             <small>Inspinia we app framework base on Bootstrap 3 © 2014</small>
