--- a/src/main/resources/templates/mail_detail.html
+++ b/src/main/resources/templates/mail_detail.html
@@ -61,7 +61,7 @@
                     <div class="ibox float-e-margins">
                         <div class="ibox-content mailbox-content">
                             <div class="file-manager">
-                                <a class="btn btn-block btn-primary compose-mail" href="mail_compose.html">写邮件</a>
+                                <a class="btn btn-block btn-primary compose-mail" href="/mail/send">写邮件</a>
                                 <div class="space-25"></div>
                                 <h5>Folders</h5>
                                 <ul class="folder-list m-b-md" style="padding: 0">
@@ -101,7 +101,7 @@
                         <div class="pull-right tooltip-demo">
                             <a href="mail_compose.html" class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="" data-original-title="Reply"><i class="fa fa-reply"></i> Reply</a>
                             <a href="#" class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="Print email"><i class="fa fa-print"></i> </a>
-                            <a href="mailbox.html" class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="" data-original-title="Move to trash"><i class="fa fa-trash-o"></i> </a>
+                            <a th:href="@{'/mail/delete?id='+${mail.id}}" class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="" data-original-title="Move to trash"><i class="fa fa-trash-o"></i> </a>
                         </div>
                         <h2>
                             查看邮件
@@ -121,71 +121,38 @@
                     <div class="mail-box">
 
 
-                        <div th:text="${mail.content}" class="mail-body">
+                        <div th:utext="${mail.content}" class="mail-body">
 
                         </div>
-                        <!--<div class="mail-attachment">-->
-                            <!--<p>-->
-                                <!--<span><i class="fa fa-paperclip"></i> 2 attachments - </span>-->
+                        <div th:if="${mail.attachment}" class="mail-attachment">
+                            <p>
+                                <span><i class="fa fa-paperclip"></i>邮件包含附件</span>
                                 <!--<a href="#">Download all</a>-->
                                 <!--|-->
                                 <!--<a href="#">View all images</a>-->
-                            <!--</p>-->
+                            </p>
 
-                            <!--<div class="attachment">-->
-                                <!--<div class="file-box">-->
-                                    <!--<div class="file">-->
-                                        <!--<a href="#">-->
-                                            <!--<span class="corner"></span>-->
+                            <div class="attachment">
+                                <div class="file-box">
+                                    <div class="file">
+                                        <a th:href="@{'/mail/file/'+${mail.fileName}}">
+                                            <span class="corner"></span>
 
-                                            <!--<div class="icon">-->
-                                                <!--<i class="fa fa-file"></i>-->
-                                            <!--</div>-->
-                                            <!--<div class="file-name">-->
-                                                <!--Document_2014.doc-->
-                                                <!--<br>-->
-                                                <!--<small>Added: Jan 11, 2014</small>-->
-                                            <!--</div>-->
-                                        <!--</a>-->
-                                    <!--</div>-->
+                                            <div class="icon">
+                                                <i class="fa fa-file"></i>
+                                            </div>
+                                            <div class="file-name">
+                                                附件
+                                                <br>
+                                                <small th:text="${mail.sendTime}">添加时间:</small>
+                                            </div>
+                                        </a>
+                                    </div>
 
-                                <!--</div>-->
-                                <!--<div class="file-box">-->
-                                    <!--<div class="file">-->
-                                        <!--<a href="#">-->
-                                            <!--<span class="corner"></span>-->
-
-                                            <!--<div class="image">-->
-                                                <!--<img alt="image" class="img-responsive" src="img/p1.jpg">-->
-                                            <!--</div>-->
-                                            <!--<div class="file-name">-->
-                                                <!--Italy street.jpg-->
-                                                <!--<br>-->
-                                                <!--<small>Added: Jan 6, 2014</small>-->
-                                            <!--</div>-->
-                                        <!--</a>-->
-
-                                    <!--</div>-->
-                                <!--</div>-->
-                                <!--<div class="file-box">-->
-                                    <!--<div class="file">-->
-                                        <!--<a href="#">-->
-                                            <!--<span class="corner"></span>-->
-
-                                            <!--<div class="image">-->
-                                                <!--<img alt="image" class="img-responsive" src="img/p2.jpg">-->
-                                            <!--</div>-->
-                                            <!--<div class="file-name">-->
-                                                <!--My feel.png-->
-                                                <!--<br>-->
-                                                <!--<small>Added: Jan 7, 2014</small>-->
-                                            <!--</div>-->
-                                        <!--</a>-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                                <!--<div class="clearfix"></div>-->
-                            <!--</div>-->
-                        <!--</div>-->
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
+                        </div>
                         <div class="mail-body text-right tooltip-demo">
                             <a class="btn btn-sm btn-white" href="mail_compose.html"><i class="fa fa-reply"></i> Reply</a>
                             <a class="btn btn-sm btn-white" href="mail_compose.html"><i class="fa fa-arrow-right"></i> Forward</a>
