添加发邮件、附件下载功能

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,7 +30,7 @@
         </p>
         <p>请登录</p>
         <div class="m-t" role="form">
-            <p style="text-align: right;color: red" id="info"></p>
+            <p style="text-align: right;color: #ffcc0a" id="info"></p>
             <div class="form-group">
                 <input id="username" type="email" class="form-control" placeholder="Username" required="">
             </div>
