--- a/src/main/resources/templates/mail_detail.html
+++ b/src/main/resources/templates/mail_detail.html
@@ -142,7 +142,7 @@
                                                 <i class="fa fa-file"></i>
                                             </div>
                                             <div class="file-name">
-                                                附件
+                                                <p th:text="${mail.fileName}"></p>
                                                 <br>
                                                 <small th:text="${mail.sendTime}">添加时间:</small>
                                             </div>
