注册和联系人

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,7 +31,7 @@
                 </div>
                 <ul class="nav navbar-top-links navbar-right">
                     <li>
-                        <span class="m-r-sm text-muted welcome-message">欢迎，{{}}</span>
+                        <span th:text="${#httpServletRequest.getAttribute('currentUser')}" class="m-r-sm text-muted welcome-message"></span>
                     </li>
                     <li class="dropdown">
                         <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
@@ -47,7 +47,7 @@
 
                     <li>
                         <a href="/mail">
-                            <i class="fa fa-sign-out"></i> Log out
+                            <i class="fa fa-sign-out"></i> 退出登录
                         </a>
                     </li>
                 </ul>
