--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,11 +7,11 @@
 
     <title>INSPINIA | Login</title>
 
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/font-awesome/css/font-awesome.css" rel="stylesheet">
 
-    <link href="css/animate.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="/css/animate.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
 
 </head>
 
@@ -21,10 +21,10 @@
     <div>
         <div>
 
-            <h1 class="logo-name">MAIL+</h1>
+            <h1 class="logo-name">M+</h1>
 
         </div>
-        <h3>欢迎使用MAIL++</h3>
+        <h3>欢迎使用MAIL+</h3>
         <p>
 
         </p>
@@ -45,17 +45,17 @@
             <p class="text-muted text-center">
                 <small>没有账号？</small>
             </p>
-            <a class="btn btn-sm btn-white btn-block" href="register.html">创建账号</a>
+            <a class="btn btn-sm btn-white btn-block" href="/mail/mailRegister">创建账号</a>
         </div>
         <p class="m-t">
-            <small>Inspinia we app framework base on Bootstrap 3 © 2014</small>
+            <!--<small>Inspinia we app framework base on Bootstrap 3 © 2014</small>-->
         </p>
     </div>
 </div>
 
 <!-- Mainly scripts -->
-<script src="js/jquery-3.1.1.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="/js/jquery-3.1.1.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
 <script>
     $("#loginButton").click(function(){
         $.ajax({
