--- a/src/main/resources/templates/mail_contact.html
+++ b/src/main/resources/templates/mail_contact.html
@@ -31,7 +31,7 @@
                 </div>
                 <ul class="nav navbar-top-links navbar-right">
                     <li>
-                        <span class="m-r-sm text-muted welcome-message">欢迎，{{}}</span>
+                        <span th:text="${#httpServletRequest.getAttribute('currentUser')}" class="m-r-sm text-muted welcome-message"></span>
                     </li>
                     <li class="dropdown">
                         <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
@@ -47,7 +47,7 @@
 
                     <li>
                         <a href="/mail">
-                            <i class="fa fa-sign-out"></i> Log out
+                            <i class="fa fa-sign-out"></i> 退出登录
                         </a>
                     </li>
                 </ul>
@@ -63,7 +63,7 @@
                             <div class="file-manager">
                                 <a class="btn btn-block btn-primary compose-mail" href="/mail/send">写邮件</a>
                                 <div class="space-25"></div>
-                                <h5>文件夹</h5>
+                                <h5>Folders</h5>
                                 <ul class="folder-list m-b-md" style="padding: 0">
                                     <li><a href="#"> <i class="fa fa-inbox "></i> 收件箱 <span class="label label-warning pull-right">16</span> </a></li>
                                     <li><a href="#"> <i class="fa fa-envelope-o"></i> 已发送</a></li>
@@ -97,71 +97,78 @@
                     </div>
                 </div>
                 <div class="col-lg-9 animated fadeInRight">
-                    <div class="mail-box-header">
-                        <div class="pull-right tooltip-demo">
-                            <a href="mail_compose.html" class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="" data-original-title="Reply"><i class="fa fa-reply"></i> Reply</a>
-                            <a href="#" class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="Print email"><i class="fa fa-print"></i> </a>
-                            <a th:href="@{'/mail/delete?id='+${mail.id}}" class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="" data-original-title="Move to trash"><i class="fa fa-trash-o"></i> </a>
-                        </div>
-                        <h2>
-                            查看邮件
-                        </h2>
-                        <div class="mail-tools tooltip-demo m-t-md">
-
-
-                            <h3>
-                                <span th:text="${mail.subject}" class="font-normal">主题: </span>
-                            </h3>
-                            <h5>
-                                <span th:text="${mail.sendTime}" class="pull-right font-normal"></span>
-                                <span th:text="${mail.from}" class="font-normal">发件人: </span>
-                            </h5>
-                        </div>
-                    </div>
-                    <div class="mail-box">
-
-
-                        <div th:utext="${mail.content}" class="mail-body">
-
-                        </div>
-                        <div th:if="${mail.attachment}" class="mail-attachment">
-                            <p>
-                                <span><i class="fa fa-paperclip"></i>邮件包含附件</span>
-                                <!--<a href="#">Download all</a>-->
-                                <!--|-->
-                                <!--<a href="#">View all images</a>-->
-                            </p>
-
-                            <div class="attachment">
-                                <div class="file-box">
-                                    <div class="file">
-                                        <a th:href="@{'/mail/file/'+${mail.fileName}}">
-                                            <span class="corner"></span>
-
-                                            <div class="icon">
-                                                <i class="fa fa-file"></i>
+                    <div class="wrapper wrapper-content animated fadeInRight">
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <div class="contact-box">
+                                    <a href="/mail/send">
+                                        <div class="col-sm-4">
+                                            <div class="text-center">
+                                                <img alt="image" class="img-circle m-t-xs img-responsive" src="/img/a1.jpg">
+                                                <div class="m-t-xs font-bold">CTO</div>
                                             </div>
-                                            <div class="file-name">
-                                                <p th:text="${mail.fileName}"></p>
-                                                <br>
-                                                <small th:text="${mail.sendTime}">添加时间:</small>
-                                            </div>
-                                        </a>
-                                    </div>
-
+                                        </div>
+                                        <div class="col-sm-8">
+                                            <h3><strong>李某某</strong></h3>
+                                            <p><i class="fa fa-map-marker"></i> 辽宁省沈阳市</p>
+                                            <address>
+                                                <strong>沈阳工业大学.</strong><br>
+                                                辽宁省沈阳市铁西区<br>
+                                                经济技术开发区沈辽西路111号<br>
+                                                <abbr title="Phone">联系方式:</abbr> admin@healthcarerzq.com
+                                            </address>
+                                        </div>
+                                        <div class="clearfix"></div>
+                                    </a>
                                 </div>
-                                <div class="clearfix"></div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="contact-box">
+                                    <a href="/mail/send">
+                                        <div class="col-sm-4">
+                                            <div class="text-center">
+                                                <img alt="image" class="img-circle m-t-xs img-responsive" src="/img/a1.jpg">
+                                                <div class="m-t-xs font-bold">CEO</div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-8">
+                                            <h3><strong>刘某某</strong></h3>
+                                            <p><i class="fa fa-map-marker"></i> 辽宁省沈阳市</p>
+                                            <address>
+                                                <strong>沈阳工业大学.</strong><br>
+                                                辽宁省沈阳市铁西区<br>
+                                                经济技术开发区沈辽西路111号<br>
+                                                <abbr title="Phone">联系方式:</abbr> admin@healthcarerzq.com
+                                            </address>
+                                        </div>
+                                        <div class="clearfix"></div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="contact-box">
+                                    <a href="/mail/send">
+                                        <div class="col-sm-4">
+                                            <div class="text-center">
+                                                <img alt="image" class="img-circle m-t-xs img-responsive" src="/img/a1.jpg">
+                                                <div class="m-t-xs font-bold">CFO</div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-8">
+                                            <h3><strong>张某某</strong></h3>
+                                            <p><i class="fa fa-map-marker"></i> 辽宁省沈阳市</p>
+                                            <address>
+                                                <strong>沈阳工业大学.</strong><br>
+                                                辽宁省沈阳市铁西区<br>
+                                                经济技术开发区沈辽西路111号<br>
+                                                <abbr title="Phone">联系方式:</abbr> admin@healthcarerzq.com
+                                            </address>
+                                        </div>
+                                        <div class="clearfix"></div>
+                                    </a>
+                                </div>
                             </div>
                         </div>
-                        <div class="mail-body text-right tooltip-demo">
-                            <a class="btn btn-sm btn-white" href="mail_compose.html"><i class="fa fa-reply"></i> 回复</a>
-                            <a class="btn btn-sm btn-white" href="mail_compose.html"><i class="fa fa-arrow-right"></i> 转发</a>
-                            <button title="" data-placement="top" data-toggle="tooltip" type="button" data-original-title="Print" class="btn btn-sm btn-white"><i class="fa fa-print"></i> 打印</button>
-                            <button title="" data-placement="top" data-toggle="tooltip" data-original-title="Trash" class="btn btn-sm btn-white"><i class="fa fa-trash-o"></i> 移动</button>
-                        </div>
-                        <div class="clearfix"></div>
-
-
                     </div>
                 </div>
             </div>
