--- a/src/main/resources/templates/mail_send.html
+++ b/src/main/resources/templates/mail_send.html
@@ -33,7 +33,7 @@
                 </div>
                 <ul class="nav navbar-top-links navbar-right">
                     <li>
-                        <span class="m-r-sm text-muted welcome-message">欢迎，{{}}</span>
+                        <span class="m-r-sm text-muted welcome-message">欢迎，</span>
                     </li>
                     <li class="dropdown">
                         <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
